[package]
name = "leptos-modal"
version = "0.3.0"
edition = "2024"
description = "Modal composable for Leptos"
license = "MIT or Apache-2.0"

[dependencies]
clone_dyn = "0.54.0"
leptos = "0.8.14"
leptos-use = "0.16.3"
reactive_stores = "0.3.0"
send_wrapper = "0.6.0"
leptos-modal-macros = { path = "../macros", version = "0.3.0" }
